--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <script src="/script.js" defer></script>
   </head>  
   <body>
-    <footer class="top">roc0ast3r.me</footer>
+    <div id="footer">roc0ast3r.me</div>
   </body>
 </html>
