--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>roc0ast3r</title>
+    <link rel="icon" href="/media/favicon.png" />
     
     <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -14,6 +15,8 @@
     <script src="/script.js" defer></script>
   </head>  
   <body>
-    <div id="footer">roc0ast3r.me</div>
+    <div id="footer">
+      <center>roc0ast3r.me</center>
+    </div>
   </body>
 </html>
