--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
     <div id="footer">
       <center>roc0ast3r.me</center>
     </div>
+    
+    <footer>
+      <div id="footer-2">
+        <a class="hvr-bounce-in" href="//twitter.com/roc0ast3r">
+          <img src="/media/twitter.svg" width="16" />
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
