--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
       <center>roc0ast3r.me</center>
     </div>
     
+    <center>
+      <span style="font-size:50px;">Welcome to <strong>roc0ast3r.me</strong>!</span><br />
+      <span style="font-size:35px;">(or roc0ast3r.github.io if you're viewing this on GitHub)</span>
+      <br /><br />
+      <span style="font-size:25px;">
+        If you don't know what this is, that's fine! This is my blog, mainly for my photography career?
+        <br /><br />
+        <strong>rOc0aSt3r WhY dOnT yOu UsE rOc0aSt3r.pHoToS????</strong><br />
+        roc0ast3r.me is cheaper, and is better anyways.
+      </span>
+    </center>
+    
     <footer>
       <div id="footer-2">
         <a class="hvr-bounce-in" href="//twitter.com/roc0ast3r">
